# Cross_Chain_Orbital_Intents_AMM

./: .codecov.yml  .dockerignore  .env.example  .env.testnet  .gitignore  ARCHITECTURE.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_README.md  Dockerfile  FRONTEND_DEPLOYMENT_FIX.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  HOLESKY_DEPLOYMENT_COMPLETE.md  NETLIFY_BUILD_FIXES.md  NETLIFY_DEPLOYMENT_GUIDE.md  NETLIFY_QUICK_FIX.md  QA_TESTING_REPORT.md  README.md  SYSTEM_ARCHITECTURE_DESIGN.md  TESTING.md  WEB3_TRANSACTION_IMPLEMENTATION_COMPLETE.md  docker-compose.prod.yml  docker-compose.yml  foundry.toml  integration_performance_tests.rs  netlify.toml  performance_analysis_suite.rs  performance_optimizations.rs  queen-directives.yaml  safla-context.json  safla-swarm-config.yaml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  netlify-deploy.yml  test.yml
backend/api/: Cargo.toml
backend/api/docs/: SOLVER_AUTHENTICATION.md
backend/api/examples/: solver_registration_example.rs  websocket_performance_test.rs
backend/api/src/: auth.rs  cache.rs  config.rs  crypto.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  websocket.rs  websocket_benchmarks.rs
backend/api/src/routes/: analytics.rs  auth.rs  health.rs  intents.rs  mod.rs  solver.rs
backend/api/tests/: crypto_security_tests.rs  solver_registration_test.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: indexer.rs  lib.rs
backend/scripts/: generate_solver_signature.js
benches/: performance_benchmarks.rs
contracts/: deploy-simple.sh  test-integration.js
contracts/intents/: Cargo.toml
contracts/intents/src/: lib.rs
contracts/orbital-amm/: Cargo.toml  deploy-holesky.sh  setup-ten-token-pool.js
contracts/orbital-amm/src/: lib.rs  orbital_core.rs
contracts/solidity/: foundry.toml
contracts/solidity/script/: DeployScript.s.sol
contracts/solidity/src/: Deploy.s.sol  IntentsEngine.sol  MockUSDC.sol  OrbitalAMM.sol
core/bridge/: Cargo.toml  README.md
core/bridge/examples/: cross_chain_transfer.rs
core/bridge/src/: lib.rs  protocols.rs  verifier.rs
core/bridge/tests/: integration_test.rs
core/engine/: Cargo.toml
core/engine/src/: executor.rs  intent.rs  lib.rs  state.rs  validator.rs
core/solver/: Cargo.toml  README.md
core/solver/src/: executor.rs  executor_tests.rs  lib.rs  matcher.rs  monitoring.rs  optimizer.rs  reputation.rs
core/solver/src/tests/: mod.rs  orbital_tests.rs
core/solver/tests/: integration_tests.rs
docs/: COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  CROSS_CHAIN_EXECUTION_FLOW.md  NETLIFY_DEPLOYMENT_COMPLETE.md  ORBITAL_ALGORITHM_PERFORMANCE_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_STARTUP_SEQUENCE.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_REPORT.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  validator_implementation.md
docs/architecture/: 00-index.md  01-virtual-pool-state-management.md  02-dynamic-fee-model.md  03-solver-reputation-system.md  04-cross-chain-message-protocol.md  05-mev-protection.md  QUICK_REFERENCE.md  SOLVER_MODULE_IMPLEMENTATION.md
docs/benchmarks/: CODEBASE_REVIEW_SUMMARY.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_SUMMARY.md  VALIDATION_SUMMARY.md
docs/deployments/: BACKEND_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md
frontend/: .env.example  ORBITAL_FRONTEND_COMPLETE.md  README.md  build-test.sh  jest.config.js  jest.setup.js  netlify.toml  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  verify-deployment.js
frontend/.next/: routes-manifest.json
frontend/public/: _redirects
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/intents/: page.tsx
frontend/src/app/orbital/: page.tsx
frontend/src/app/swap/: page.tsx
frontend/src/components/__tests__/: Button.test.tsx  SwapInterface.test.tsx
frontend/src/components/bridge/: CrossChainBridge.tsx
frontend/src/components/intents/: IntentCreationModal.tsx  IntentHistory.tsx  IntentManager.tsx  SolverNetwork.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/orbital/: ConcentratedLiquidityManager.tsx  MEVProtectionPanel.tsx  OrbitalAnalytics.tsx  OrbitalPoolCreator.tsx  TenTokenPoolDemo.tsx  ToroidalTrading.tsx
frontend/src/components/swap/: PriceImpactWarning.tsx  SwapInterface.tsx  SwapSettings.tsx  TokenSelector.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  MobileOptimized.tsx  (+6 more)
frontend/src/config/: contracts.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: useContracts.ts  useCrossChainBridge.ts  useTransactionMonitor.ts  useTransactions.ts  useWeb3.ts
frontend/src/lib/: contracts.ts  wagmi.ts
frontend/src/scripts/: test-web3-functionality.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
frontend/tests/e2e/: swap-flow.spec.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: orbital-amm-overview.json
monitoring/rules/: alerts.yml
orbital-math/: Cargo.toml  PRODUCTION_READY_SUMMARY.md
orbital-math/src/: DEVELOPMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE_I_COMPLETE.md  PROJECT_DELIVERY_SUMMARY.md  QUICK_START.md  README.md  VISUAL_ARCHITECTURE.md  concentrated_liquidity.rs  integration_tests.rs  lib.rs  multi_dimensional.rs  simple_swaps.rs  sphere.rs  superellipse.rs  ten_token_demo.rs  ticks.rs  trades.rs  types.rs  utils.rs
scripts/: demo_holesky.sh  deploy-netlify.sh  deploy_all_chains.sh  deploy_holesky.sh  queen-dashboard.sh  queen-orchestrator.sh  run_tests.sh  safla-init.sh  test_all.sh  validator_hooks.sh
src/: lib.rs
src/deployment/: mod.rs
test/: OrbitalAMM.t.sol
tests/: TEST_SUITE_SUMMARY.json  automated_ci_test_suite.rs  cross_chain_tests.rs  holesky_integration_tests.rs  integration_tests.rs  orbital_amm_tests.rs  property_tests.rs  real_cross_chain_tests.rs  real_error_scenario_tests.rs  real_intent_creation_tests.rs  real_orbital_amm_swap_tests.rs  real_performance_tests.rs  security_tests.rs  solver_network_tests.rs  validator_integration_tests.rs
(+3 files in other folders)
