[package]
name = "intents-api"
version = "1.0.0"
edition = "2021"
authors = ["Rust Intents Team"]
license = "MIT"
description = "REST API service for Cross-Chain Orbital Intents AMM"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "query"] }
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
jsonwebtoken = "9.1"
sha2 = "0.10"
rand = "0.8"
bcrypt = "0.15"

# Blockchain
ethers = "2.0"
alloy = { version = "0.3", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
eyre = "0.6"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"

# Internal dependencies
intents-engine = { path = "../../core/engine" }
intents-solver = { path = "../../core/solver" }
intents-bridge = { path = "../../core/bridge" }

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.7"

[features]
default = []
holesky = []
mainnet = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"