[package]
name = "intents-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.32", features = ["full"] }
hex = "0.4"
sha2 = "0.10"
ethers = "2.0"

# Cross-chain specific dependencies
primitive-types = "0.12"
rlp = "0.5"
keccak-hash = "0.10"

# Internal dependencies
intents-engine = { path = "../engine" }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"